--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -16,7 +16,7 @@ jobs:
         image: postgres:15
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: @Caique201030
+          POSTGRES_PASSWORD: "@Caique201030"
           POSTGRES_DB: ong_cachorros
         ports:
           - 5432:5432
